--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -138,6 +138,15 @@ Once we started to look at excitation and ionisation energies however, optimisat
 \caption{Comparison of pseudo-alkenes with previous (Drujon and Carissan, JCC 2013 (34) 49-59) and current potentials using TD-DFT excitation energies.}
 \label{fig:alkenes_tddft}
 \end{figure}
+Figure \ref{fig:alkenes_tddft} shows excitation energy of the first triplet $\pi$ excited state
+for the six short polenes studied in the article.
+These excitation energies are obtained at the same level of theory with the previous
+version of our work (Drujon and Carissan, JCC 2013 (34) 49-59) and the current work.
+As can be seen there is no degradation of the agreement between reference and pseudo calculations.
+The main difference between both these pseudo systems lies in the fact that in 2013, the pseudo-potentials
+had to be placed exactly at the center of the C-C bond whereas in the current work, pseudo-potentials
+are placed at a position relative to the center of the pseudo system and do not involve
+the C-C distance (the bond direction is still used).
 
 \section*{Full Excited states analysis: singlet and triplet and RPA vs CIS}
 As can be seen from figures \ref{fig:cnhn_uv_rpas}, \ref{fig:cnhn_uv_rpat},
