change rpa singlet graph

--- a/main.tex
+++ b/main.tex
@@ -540,7 +540,7 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 
 \begin{figure}
 \caption{Comparison of the absorption spectra for the first 20 excitations obtained with
-pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-PBE0). Peaks marked
+pseudo-potentials (blue) and all-electron (red) calculations (def2-SV(P)/TD-PBE0). Peaks marked
 with * cannot be reproduced by the pseudo-potentials as they are $\sigma$ to $\sigma$ excitations.
 Excitation energies obtained with the pseudo-potentials were corrected by a factor 0.91.}
 \label{fig:cnhn_uv}
